growth guide page not completed yet need some code

--- a/themes/zephyr/front-end/src/components/component-growth-guide/index.html
+++ b/themes/zephyr/front-end/src/components/component-growth-guide/index.html
@@ -25,10 +25,10 @@
                       </div>
                     </div>
                     <ol class="guide-content">
-                      <li>Who is this guide for?</li>
-                      <li>Websites & why I am not talking about them here.</li>
-                      <li>Who are we and why did we write this?</li>
-                      <li>How up to date is it?</li>
+                      <li><a href="#">Who is this guide for?</a></li>
+                      <li><a href="#">Websites & why I am not talking about them here.</a></li>
+                      <li><a href="#">Who are we and why did we write this?</a></li>
+                      <li><a href="#">How up to date is it?</a></li>
                     </ol>
                   </li>
                   <li class="guide">
@@ -40,10 +40,10 @@
                       </div>
                     </div>
                     <ol class="guide-content">
-                      <li>Who is this guide for?</li>
-                      <li>Websites & why I am not talking about them here.</li>
-                      <li>Who are we and why did we write this?</li>
-                      <li>How up to date is it?</li>
+                      <li><a href="#">Who is this guide for?</a></li>
+                      <li><a href="#">Websites & why I am not talking about them here.</a></li>
+                      <li><a href="#">Who are we and why did we write this?</a></li>
+                      <li><a href="#">How up to date is it?</a></li>
                     </ol>
                   </li>
                   <li class="guide">
@@ -55,10 +55,10 @@
                       </div>
                     </div>
                     <ol class="guide-content">
-                      <li>Who is this guide for?</li>
-                      <li>Websites & why I am not talking about them here.</li>
-                      <li>Who are we and why did we write this?</li>
-                      <li>How up to date is it?</li>
+                      <li><a href="#">Who is this guide for?</a></li>
+                      <li><a href="#">Websites & why I am not talking about them here.</a></li>
+                      <li><a href="#">Who are we and why did we write this?</a></li>
+                      <li><a href="#">How up to date is it?</a></li>
                     </ol>
                   </li>
                   <li class="guide">
@@ -70,10 +70,10 @@
                       </div>
                     </div>
                     <ol class="guide-content">
-                      <li>Who is this guide for?</li>
-                      <li>Websites & why I am not talking about them here.</li>
-                      <li>Who are we and why did we write this?</li>
-                      <li>How up to date is it?</li>
+                      <li><a href="#">Who is this guide for?</a></li>
+                      <li><a href="#">Websites & why I am not talking about them here.</a></li>
+                      <li><a href="#">Who are we and why did we write this?</a></li>
+                      <li><a href="#">How up to date is it?</a></li>
                     </ol>
                   </li>
                   <li class="guide">
@@ -85,10 +85,10 @@
                       </div>
                     </div>
                     <ol class="guide-content">
-                      <li>Who is this guide for?</li>
-                      <li>Websites & why I am not talking about them here.</li>
-                      <li>Who are we and why did we write this?</li>
-                      <li>How up to date is it?</li>
+                      <li><a href="#">Who is this guide for?</a></li>
+                      <li><a href="#">Websites & why I am not talking about them here.</a></li>
+                      <li><a href="#">Who are we and why did we write this?</a></li>
+                      <li><a href="#">How up to date is it?</a></li>
                     </ol>
                   </li>
                   <li class="guide">
@@ -100,10 +100,10 @@
                       </div>
                     </div>
                     <ol class="guide-content">
-                      <li>Who is this guide for?</li>
-                      <li>Websites & why I am not talking about them here.</li>
-                      <li>Who are we and why did we write this?</li>
-                      <li>How up to date is it?</li>
+                      <li><a href="#">Who is this guide for?</a></li>
+                      <li><a href="#">Websites & why I am not talking about them here.</a></li>
+                      <li><a href="#">Who are we and why did we write this?</a></li>
+                      <li><a href="#">How up to date is it?</a></li>
                     </ol>
                   </li>
                   <li class="guide">
@@ -115,10 +115,10 @@
                       </div>
                     </div>
                     <ol class="guide-content">
-                      <li>Who is this guide for?</li>
-                      <li>Websites & why I am not talking about them here.</li>
-                      <li>Who are we and why did we write this?</li>
-                      <li>How up to date is it?</li>
+                      <li><a href="#">Who is this guide for?</a></li>
+                      <li><a href="#">Websites & why I am not talking about them here.</a></li>
+                      <li><a href="#">Who are we and why did we write this?</a></li>
+                      <li><a href="#">How up to date is it?</a></li>
                     </ol>
                   </li>
                 </ol>
@@ -151,18 +151,21 @@
             <div class="col-12 col-md">
               <div class="right-content">
                 <h3 class="headline-3">1. An Introduction to the guide</h3>
-                <h5>1.1   Who is this guide for?</h5>
+                <h6 class="headline-7"><span>1.1</span> Who is this guide for?</h6>
+                <div class="paragraphs">
                 <p class="paragraph-1">This guide was created to help small business owners setup or improve their digital profile in order to grow their business. Given the sections on local
                   search, businesses
                   with a physical location are likely to benefit from this more than those without. However if you run or are part of a business without a physical location it will still be very
                   helpful for you.
-                  When we started writing this guide we hand in mind businesses that have between 2 and 15 full or part time me<span>mbers of staff. In all cases we are assuming that the companies are
+                </p>
+                <p class="paragraph-1">When we started writing this guide we hand in mind businesses that have between 2 and 15 full or part time me<span>mbers of staff. In all cases we are assuming that the companies are
                   looking to grow organically without a huge amount of upfront investment and that therefore hiring agencies or building out a large marketing team is j</span>ust simply not an option.
                   Some examples might include:</p>
+                </div>
                 <ul>
-                  <li>An art gallery looking to generate sales and enquiries.</li>
-                  <li>An accountancy firm looking to find new customers.</li>
-                  <li>An escape room looking to generate online bookings</li>
+                  <li class="paragraph-1">An art gallery looking to generate sales and enquiries.</li>
+                  <li class="paragraph-1">An accountancy firm looking to find new customers.</li>
+                  <li class="paragraph-1">An escape room looking to generate online bookings</li>
                 </ul>
                 <div class="image-wrapper">
                   <img alt="guide image" src="../../html/images/guide-image.png">
@@ -180,8 +183,10 @@
                   <img alt="name of person" src="./../../html/images/se.png">
                   <p class="paragraph-1">Writen by <span>Nick Rushton</span></p>
                 </div>
-                <h3 class="headline-3">Next Chapter ></h3>
-                <h5>Websites & why I am not talking about them here</h5>
+                <a href="#"class="next-chapter">
+                  <h3 class="headline-3">Next Chapter ></h3>
+                  <h6 class="headline-7"><span>1.2 </span> Websites & why I am not talking about them here</h6>
+                </a>
               </div>
             </div>
           </div>
