--- a/themes/zephyr/front-end/src/styles/_variables.scss
+++ b/themes/zephyr/front-end/src/styles/_variables.scss
@@ -32,7 +32,7 @@ $zephyr-green-light: var(--zephyr-green-light);
 $Sailec: 'Sailec';
 $Canela: 'Canela';
 $Freight: 'Freight Text Pro Book';
-
+$Acumin : 'Acumin Pro';
 
 
 //override bootstrap variables
