--- a/themes/zephyr/front-end/src/components/component-growth-guide/index.html
+++ b/themes/zephyr/front-end/src/components/component-growth-guide/index.html
@@ -153,14 +153,14 @@
                 <h3 class="headline-3">1. An Introduction to the guide</h3>
                 <h6 class="headline-7"><span>1.1</span> Who is this guide for?</h6>
                 <div class="paragraphs">
-                <p class="paragraph-1">This guide was created to help small business owners setup or improve their digital profile in order to grow their business. Given the sections on local
-                  search, businesses
-                  with a physical location are likely to benefit from this more than those without. However if you run or are part of a business without a physical location it will still be very
-                  helpful for you.
-                </p>
-                <p class="paragraph-1">When we started writing this guide we hand in mind businesses that have between 2 and 15 full or part time me<span>mbers of staff. In all cases we are assuming that the companies are
+                  <p class="paragraph-1">This guide was created to help small business owners setup or improve their digital profile in order to grow their business. Given the sections on local
+                    search, businesses
+                    with a physical location are likely to benefit from this more than those without. However if you run or are part of a business without a physical location it will still be very
+                    helpful for you.
+                  </p>
+                  <p class="paragraph-1">When we started writing this guide we hand in mind businesses that have between 2 and 15 full or part time me<span>mbers of staff. In all cases we are assuming that the companies are
                   looking to grow organically without a huge amount of upfront investment and that therefore hiring agencies or building out a large marketing team is j</span>ust simply not an option.
-                  Some examples might include:</p>
+                    Some examples might include:</p>
                 </div>
                 <ul>
                   <li class="paragraph-1">An art gallery looking to generate sales and enquiries.</li>
@@ -183,7 +183,7 @@
                   <img alt="name of person" src="./../../html/images/se.png">
                   <p class="paragraph-1">Writen by <span>Nick Rushton</span></p>
                 </div>
-                <a href="#"class="next-chapter">
+                <a class="next-chapter" href="#">
                   <h3 class="headline-3">Next Chapter ></h3>
                   <h6 class="headline-7"><span>1.2 </span> Websites & why I am not talking about them here</h6>
                 </a>
@@ -192,6 +192,7 @@
           </div>
         </div>
       </div>
+    </div>
   </section>
 </div>
 <script src="./main.js"></script>
