hover effect in footer links

--- a/themes/zephyr/front-end/src/components/footer-component/index.html
+++ b/themes/zephyr/front-end/src/components/footer-component/index.html
@@ -43,30 +43,32 @@
             </a>
           </div>
           <div class="link hide">
-            <a class="paragraph" href="#">Facebook</a>
-            <a class="paragraph" href="#">Linkedin</a>
-            <a class="paragraph" href="#">Twitter</a>
+            <a class="paragraph" href="#"><span data-hover="Facebook">Facebook</span></a>
+            <a class="paragraph" href="#"><span data-hover="Linkedin">Linkedin</span></a>
+            <a class="paragraph" href="#"><span data-hover="Twitter">Twitter</span></a>
           </div>
 
         </div>
         <div class="title-and-link legal">
           <h3 class="headline-7">LEGAL</h3>
           <div class="link">
-            <a class="paragraph" href="#">T’s & Cs</a>
-            <a class="paragraph" href="#">Privacy Policy</a>
-            <a class="paragraph" href="#">Cookies</a>
-            <a class="paragraph" href="#">Accessibility Statement</a>
+            <a class="paragraph" href="#"><span data-hover="T’s & Cs">T’s & Cs</span></a>
+            <a class="paragraph" href="#"><span data-hover="Privacy Policy">Privacy Policy</span></a>
+            <a class="paragraph" href="#"><span data-hover="Cookies">Cookies</span></a>
+            <a class="paragraph" href="#"><span data-hover="Accessibility Statement">Accessibility Statement</span>
+            </a>
           </div>
         </div>
         <div class="title-and-link navigation">
           <h3 class="headline-7">NAVIGATION</h3>
           <div class="link">
-            <a class="paragraph" href="#">Health & Wellbeing</a>
-            <a class="paragraph" href="#">Future Transport</a>
-            <a class="paragraph" href="#">Experiential Economy</a>
-            <a class="paragraph" href="#">About Us</a>
-            <a class="paragraph" href="#">Growth Guide</a>
-            <a class="paragraph" href="#">Get in Touch</a>
+            <a class="paragraph" href="#"><span data-hover="Health & Wellbeing">Health & Wellbeing</span></a>
+            <a class="paragraph" href="#"><span data-hover="Future Transport">Future Transport</span></a>
+            <a class="paragraph" href="#"><span data-hover="Experiential Economy">Experiential Economy</span>
+            </a>
+            <a class="paragraph" href="#"><span data-hover="About Us">About Us</span></a>
+            <a class="paragraph" href="#"><span data-hover="Growth Guide">Growth Guide</span></a>
+            <a class="paragraph" href="#"><span data-hover="Get in Touch">Get in Touch</span></a>
           </div>
         </div>
       </div>
