--- a/themes/zephyr/front-end/src/components/footer-component/style.scss
+++ b/themes/zephyr/front-end/src/components/footer-component/style.scss
@@ -7,6 +7,7 @@ footer {
     @include x-large-screen {
         @include paddingY(size(67), size(143));
     }
+    
     .footer-content {
         display: flex;
         flex-direction: column;
@@ -53,7 +54,7 @@ footer {
                 display: flex;
                 flex-direction: column;
                 align-items: center;
-             
+                
                 @include x-large-screen {
                     justify-content: flex-start;
                     align-items: flex-start;
@@ -70,6 +71,7 @@ footer {
                     @include x-large-screen {
                         display: flex;
                         flex-direction: column;
+                        align-items: flex-start;
                     }
                     
                     .paragraph {
@@ -77,12 +79,34 @@ footer {
                         transition: all 400ms ease-in-out;
                         @include x-large-screen {
                             line-height: size(24);
-                            &:not(:last-child){
+                            &:not(:last-child) {
                                 margin-bottom: size(12);
                             }
                         }
-                        &:hover{
+                        
+                        &:hover {
                             color: $zephyr-green;
+                        }
+                    }
+    
+                    a {
+                        overflow: hidden;
+                        span {
+                            position: relative;
+                            //display: inline-block;
+                            transition: transform 0.3s;
+                            display: block;
+                            &:before{
+                                position: absolute;
+                                top: 100%;
+                                content: attr(data-hover);
+                                transform: translate3d(0,0,0);
+                            }
+                        }
+                        &:hover{
+                            span{
+                                transform: translateY(-100%);
+                            }
                         }
                     }
                 }
