component-article-guide not completed yet

--- a/themes/zephyr/front-end/src/components/component-article-guide/index.html
+++ b/themes/zephyr/front-end/src/components/component-article-guide/index.html
@@ -3,26 +3,22 @@
 <meta content="ie=edge" http-equiv="X-UA-Compatible">
 <div smooth-scroll-container="">
   
-  <section class="component-growth-guide">
+  <section class="component-article-guide">
     <div class="container">
-      <div class="growth-guide">
-        <div class="growth-guide-title center">
+      <div class="article-guide">
+        <div class="article-guide-title center">
           <h6 class="headline-6 normal word-up">GROWTH GUIDE</h6>
-          <h2 class="headline-2 real-line-up">Digital Growth Marketing & Transformation
-            for small businesses </h2>
+          <h2 class="headline-2 real-line-up">Digital Growth Marketing & Transformation for small businesses </h2>
         </div>
-        <div class="growth-guide-content">
+        <div class="article-guide-content">
           <div class="row">
             <div class="col-12 col-md-auto">
               <div class="left-content">
-                <ol class="guide-container">
+                <h6 class="headline-6">Contents</h6>
+                <ol class="article-container">
                   <li class="guide iv-st-from-bottom">
                     <div class="title">
                       <h3>An Introduction to the guide</h3>
-                      <div class="icons">
-                        <span class="plus icon">+</span>
-                        <span class="minus icon">-</span>
-                      </div>
                     </div>
                     <ol class="guide-content">
                       <li><a href="#">Who is this guide for?</a></li>
@@ -34,10 +30,6 @@
                   <li class="guide iv-st-from-bottom">
                     <div class="title">
                       <h3>Creating a Digital Growth Strategy</h3>
-                      <div class="icons">
-                        <span class="plus icon">+</span>
-                        <span class="minus icon">-</span>
-                      </div>
                     </div>
                     <ol class="guide-content">
                       <li><a href="#">Who is this guide for?</a></li>
@@ -49,10 +41,6 @@
                   <li class="guide iv-st-from-bottom">
                     <div class="title">
                       <h3>Measuring Success</h3>
-                      <div class="icons">
-                        <span class="plus icon">+</span>
-                        <span class="minus icon">-</span>
-                      </div>
                     </div>
                     <ol class="guide-content">
                       <li><a href="#">Who is this guide for?</a></li>
@@ -64,10 +52,6 @@
                   <li class="guide iv-st-from-bottom">
                     <div class="title">
                       <h3>Organic SEO </h3>
-                      <div class="icons">
-                        <span class="plus icon">+</span>
-                        <span class="minus icon">-</span>
-                      </div>
                     </div>
                     <ol class="guide-content">
                       <li><a href="#">Who is this guide for?</a></li>
@@ -79,10 +63,6 @@
                   <li class="guide iv-st-from-bottom">
                     <div class="title">
                       <h3>Local SEO</h3>
-                      <div class="icons">
-                        <span class="plus icon">+</span>
-                        <span class="minus icon">-</span>
-                      </div>
                     </div>
                     <ol class="guide-content">
                       <li><a href="#">Who is this guide for?</a></li>
@@ -94,10 +74,6 @@
                   <li class="guide iv-st-from-bottom">
                     <div class="title">
                       <h3>PPC</h3>
-                      <div class="icons">
-                        <span class="plus icon">+</span>
-                        <span class="minus icon">-</span>
-                      </div>
                     </div>
                     <ol class="guide-content">
                       <li><a href="#">Who is this guide for?</a></li>
@@ -109,10 +85,6 @@
                   <li class="guide iv-st-from-bottom">
                     <div class="title">
                       <h3>Social Media & Campaigns</h3>
-                      <div class="icons">
-                        <span class="plus icon">+</span>
-                        <span class="minus icon">-</span>
-                      </div>
                     </div>
                     <ol class="guide-content">
                       <li><a href="#">Who is this guide for?</a></li>
@@ -150,42 +122,15 @@
             </div>
             <div class="col-12 col-md">
               <div class="right-content">
-                <h3 class="headline-3 word-up">1. An Introduction to the guide</h3>
-                <h6 class="headline-8 word-up"><span>1.1</span> Who is this guide for?</h6>
-                <div class="paragraphs">
-                  <p class="paragraph-1 real-line-up">This guide was created to help small business owners setup or improve their digital profile in order to grow their business. Given the sections on local
-                    search, businesses
-                    with a physical location are likely to benefit from this more than those without. However if you run or are part of a business without a physical location it will still be very
-                    helpful for you.
-                  </p>
-                  <p class="paragraph-1 real-line-up">When we started writing this guide we hand in mind businesses that have between 2 and 15 full or part time me<span>mbers of staff. In all cases we are assuming that the companies are
-                  looking to grow organically without a huge amount of upfront investment and that therefore hiring agencies or building out a large marketing team is j</span>ust simply not an option.
-                    Some examples might include:</p>
-                </div>
-                <ul>
-                  <li class="paragraph-1 real-line-up">An art gallery looking to generate sales and enquiries.</li>
-                  <li class="paragraph-1 real-line-up">An accountancy firm looking to find new customers.</li>
-                  <li class="paragraph-1 real-line-up">An escape room looking to generate online bookings</li>
-                </ul>
-                <div class="image-wrapper" data-reveal-direction="left">
-                  <img alt="guide image" src="../../html/images/guide-image.png">
-                </div>
-                <p class="paragraph-1 real-line-up">
-                  The guide tries to explain all the technical elements of the process as clearly and as simply as possible, that being said an interest in tech and digital is helpful and a
-                  basic understanding of how websites work (most importantly your website) will get you a long way.
-                </p>
-                <p class="paragraph-1 real-line-up">
-                  We appreciate that there are 101 different ways to build a website so we have tried as much as possible to keep our advice platform agnostic. That being said most of the sites
-                  we build have Wordpress content management systems and according to Kinsta, 35% of all websites use Wordpress and 62% of websites with a content management system use Wordpress
-                  so there is therefore a good chance that you to, sitting at home probably use Wordpress.
-                </p>
-                <div class="written-by d-flex align-items-center iv-st-from-bottom">
-                  <img alt="name of person" src="./../../html/images/se.png">
-                  <p class="paragraph-1">Writen by <span>Nick Rushton</span></p>
-                </div>
+                <h6 class="headline-8 word-up"><span>1.2 </span> Websites & why I am not talking about them here.</h6>
+                <p class="paragraph-1 real-line-up">When we first start working with clients, often the first thing that we do is work on defining their proposition and brand and then building their
+                  website. However this guide specifically avoids talking a lot about this process. This is because there is a huge amount of variation in the process and requirements when approaching
+                  these elements. Different companies need their website to do completely different things and defining a companies proposition and brand is a creative process that is more art than
+                  science, we might come back to talk about these elements in more detail at a later date but for now we wanted to focus on the nuts and bolts of setting up a digital presence and
+                  starting to connect with your customers online. </p>
                 <a class="next-chapter iv-st-from-bottom" href="#">
                   <h3 class="headline-3">Next Chapter ></h3>
-                  <h6 class="headline-8"><span>1.2 </span> Websites & why I am not talking about them here</h6>
+                  <h6 class="headline-8"><span>1.3 </span> Who are we and why did we write this guide?</h6>
                 </a>
               </div>
             </div>
