component-article-guide not completed yet

--- a/themes/zephyr/front-end/src/components/component-article-guide/style.scss
+++ b/themes/zephyr/front-end/src/components/component-article-guide/style.scss
@@ -13,6 +13,7 @@ section.component-article-guide {
                     font-size: size(24);
                     letter-spacing: size(0.4);
                     font-family: $Acumin;
+                    text-transform: none;
                     @include paddingX(size(26));
                     margin-bottom: size(40);
                 }
