--- a/themes/zephyr/front-end/src/styles/_general-classes.scss
+++ b/themes/zephyr/front-end/src/styles/_general-classes.scss
@@ -253,14 +253,13 @@ h1, h2, h3, h4, h5, h6, p, ul, ol {
 }
 
 .headline-6, .cta, .wysiwyg-block h6 {
-    color: $zephyr-white;
+    color: $zephyr-gray;
     font-family: $Sailec;
     font-size: size(14);
     font-weight: 500;
     letter-spacing: size(0.44);
     line-height: size(24);
     text-transform: uppercase;
-    text-align: center;
     &.normal {
         font-weight: 400;
     }
@@ -307,7 +306,6 @@ h1, h2, h3, h4, h5, h6, p, ul, ol {
     font-style: normal;
     letter-spacing: size(0.5);
     line-height: size(24);
-    text-align: center;
     
     @include x-large-screen {
         font-size: size(18);
@@ -352,6 +350,7 @@ ol {
         h3 {
             @extend .headline-6;
             font-weight: 600;
+            text-transform: none;
             font-size: size(15);
             letter-spacing: size(0.27);
         }
