--- a/themes/zephyr/front-end/src/styles/_fonts.scss
+++ b/themes/zephyr/front-end/src/styles/_fonts.scss
@@ -1,1 +1,32 @@
 @import "variables";
+
+@font-face {
+    font-family: $Acumin;
+    src: url('./fonts/Acumin-RPro.otf') format('opentype');
+    font-weight: 400;
+    font-style: normal;
+    font-display: swap;
+}
+@font-face {
+    font-family: $Sailec;
+    src: url('./fonts/SailecRegular.ttf') format('opentype');
+    font-weight: 400;
+    font-style: normal;
+    font-display: swap;
+}
+
+@font-face {
+    font-family: $Canela;
+    src: url('./fonts/canela_light.otf') format('opentype');
+    font-weight: 400;
+    font-style: normal;
+    font-display: swap;
+}
+
+@font-face {
+    font-family: $Freight;
+    src: url('./fonts/Freight Text Light.otf') format('opentype');
+    font-weight: 400;
+    font-style: normal;
+    font-display: swap;
+}
