btn hover effect

--- a/themes/zephyr/front-end/src/components/component-our-team/index.html
+++ b/themes/zephyr/front-end/src/components/component-our-team/index.html
@@ -119,6 +119,11 @@
                 <h6 class="title-job">Conversion Rate Optimisation</h6>
               </div>
             </div>
+            <div class="col-12">
+              <a href="#" class="load-more btn">
+                Load More
+              </a>
+            </div>
           </div>
         </div>
       </div>
