--- a/themes/zephyr/front-end/src/styles/_general-classes.scss
+++ b/themes/zephyr/front-end/src/styles/_general-classes.scss
@@ -170,7 +170,7 @@ h1, h2, h3, h4, h5, h6, p, ul, ol {
     letter-spacing: size(0.58);
     line-height: size(37.8);
     text-align: center;
-
+    
     @include x-large-screen {
         font-size: size(72);
         letter-spacing: size(0.44);
@@ -243,13 +243,14 @@ h1, h2, h3, h4, h5, h6, p, ul, ol {
     letter-spacing: size(0.44);
     line-height: size(24);
     text-transform: uppercase;
+    
     &.normal {
         font-weight: 400;
     }
 }
 
 // in footer
-.headline-7{
+.headline-7 {
     color: $zephyr-gray;
     font-family: $Freight;
     font-size: size(18);
@@ -257,12 +258,13 @@ h1, h2, h3, h4, h5, h6, p, ul, ol {
     font-style: italic;
     line-height: normal;
     letter-spacing: size(0.16);
-    @include x-large-screen{
+    @include x-large-screen {
         font-size: size(24);
         line-height: size(66);
     }
 }
-.headline-8{
+
+.headline-8 {
     color: $zephyr-gray;
     font-family: $Acumin;
     font-size: size(18);
@@ -270,15 +272,13 @@ h1, h2, h3, h4, h5, h6, p, ul, ol {
     font-style: italic;
     line-height: normal;
     letter-spacing: size(0.16);
-    @include x-large-screen{
+    @include x-large-screen {
         font-size: size(24);
         line-height: size(66);
     }
 }
 
 // in footer
-
-
 
 
 .paragraph, .wysiwyg-block, p, .wysiwyg-block {
@@ -329,7 +329,7 @@ ol {
     
     > li {
         counter-increment: item;
-    
+        
         h3 {
             @extend .headline-6;
             font-weight: 600;
@@ -355,6 +355,7 @@ ol {
                     font-weight: 700;
                     font-style: italic;
                 }
+                
                 display: block;
                 position: relative;
                 
@@ -404,7 +405,8 @@ ol {
         }
     }
 }
-.article-container,.guide-container{
+
+.article-container, .guide-container {
     .guide {
         &:not(:last-child) {
             margin-bottom: size(10);
@@ -517,17 +519,50 @@ ol {
 
 .btn {
     color: $zephyr-gray;
-    font-family: $Canela;
+    font-family: $Sailec;
     font-size: size(12);
     font-weight: 400;
     font-style: normal;
     letter-spacing: size(0.38);
-    line-height: size(24);
     text-align: center;
-    width: fit-content;
+    max-width: size(156);
+    min-height: size(39);
     border: 1px solid #4b4b4b;
-    background-color: #ffffff;
-    padding: size(14) size(55);
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    padding: size(7) size(20) size(5);
+    position: relative;
+    transition: color 400ms;
+    &::before {
+        content: '';
+        position: absolute;
+        left: 0;
+        top: 0;
+        width: 0;
+        height: 100%;
+        background: #5fe099;
+        transition: width 400ms;
+        z-index: -1;
+    }
+    &:hover {
+        border-color: #5fe099;
+        &::before {
+            width: 100%;
+        }
+    }
+    &.has-bg{
+        border: 0;
+        &::before{
+            width: 100%;
+            background: #5fe099;
+        }
+        &:hover{
+            &::before{
+                width: 0;
+            }
+        }
+    }
 }
 
 svg {
